<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sprite</string>
    <string name="upadte">Update</string>
    <string name="delete">Delete</string>
    <string name="nav_home">Home</string>
    <string name="nav_sanpham">Product Management</string>
    <string name="nav_khachhang">Customer Management</string>
    <string name="nav_don">Manage Orders</string>
    <string name="nav_nguoidung">Manage Users</string>
    <string name="nav_nhanvien">Employee Management</string>
    <string name="nav_chat">Message Management</string>
    <string name="Chat">Chat</string>
    <string name="nav_taikhoan">Account</string>
    <string name="nav_thongtin">Information</string>
    <string name="nav_matkhau">Change password</string>
    <string name="nav_thoat">Exit</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="Findyourfavoritefood">Find your favorite food</string>
    <string name="RecentOrder">Recent Order</string>
    <string name="PopularMenu">Popular Menu</string>
    <string name="Viewmore">View more</string>

    <string name="Edit">Edit</string>
    <string name="Fillinyourbiotogetstarted">Fill in your bio to get \nstarted</string>
    <string name="Letchooseacoolname">Let\'s choose a cool name \nand profile picture to show everyone</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="Address">Address</string>
    <!--    mewnu user home-->
    <string name="Home">Home</string>
    <string name="Message">Message</string>
    <string name="Cart">Cart</string>
    <string name="Profile">Profile</string>
    <string name="Myaccount">My account</string>
    <string name="GeneralSettings">General Settings</string>
    <string name="ProfileSettings">Profile Settings</string>
    <string name="LogOut">Log Out</string>
    <string name="Total">Total</string>
    <string name="PendingOrders">Pending Orders</string>
    <string name="NewestFoods">Newest Foods</string>
    <string name="Note">Note: </string>
    <string name="PlaceMyOrder">Place My Order</string>
    <string name="ManageYourFoodsOrders">Manage Your Foods &amp; Orders</string>
    <string name="MyMenu">My Menu</string>
    <string name="AddNew">Add New</string>
    <string name="ProductName">Product Name</string>
    <string name="Price">Price</string>
    <string name="Category">Category</string>
    <string name="Description">Description</string>
    <string name="Selectone">Select one</string>
    <string name="addSP">Add</string>
    <string name="updateSP">Update</string>
    <string name="Reviews">Reviews</string>
    <string name="viewdetail">View details</string>
    <string name="Addtocart">Add to cart</string>
    <string name="item">item(s)</string>
    <string name="CreateOrderMessage">CreateOrderMessage</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="Sold">Sold:</string>
    <string name="mycart">MY CART</string>
    <string name="myorder">MY ORDER</string>
    <string name="Whatdoyouwanttofind">What do you want to find?</string>
    <string name="order_details">Order details</string>
    <string name="total">Total</string>
    <string name="review">Review</string>
    <string name="PENDING">PENDING</string>
    <string name="PROCESSED">PROCESSED</string>
    <string name="COMPLETED">COMPLETED</string>
    <string name="CANCELLED">CANCELLED</string>
    <string name="YourOrder">Your order: #</string>
    <string name="UPendingNoti"> needs to be confirmed because of the extra cost</string>
    <string name="Updateordersuccessfully">Update order successfully!</string>
    <string name="Warning">Warning</string>
    <string name="Areyousure">Are you sure you want to delete this?</string>
    <string name="DeleteOrderMessage">DeleteOrderMessage</string>
    <string name="Thankyou">Thank you!</string>
    <string name="Pleaserate">Please rate your orders!</string>
    <string name="Submit">Submit</string>
    <string name="Feedback">Leave Feedback</string>
    <string name="Skip">Skip</string>
    <string name="ReviewOrderMessage">ReviewOrderMessage</string>
    <string name="Order">Orders</string>
    <string name="password">Password</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="email">Email</string>
    <string name="SignupforFREE">Sign up for FREE</string>
    <string name="atleast6characters">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="CreateAccount">Create Account</string>
    <string name="alreadyhaveanaccount">already have an account?</string>
    <string name="l_u_m_t_kh_u">Save password</string>
    <string name="b_n_l_ng_i_d_ng_m_i_ng_k">Bạn là người dùng mới? Đăng ký</string>
    <string name="filter">Filter</string>
    <string name="Rating">Rating</string>
    <string name="PriceRange">Price range</string>
    <string name="Sortby">Sort by</string>
    <string name="ALL">ALL</string>
    <string name="FOOD">FOOD</string>
    <string name="DRINK">DRINK</string>
    <string name="Confirm">Confirm</string>
    <string name="Searchresultfor">Search result for:</string>
    <string name="Notification">Notification</string>
    <string name="UProcessedNoti"> is in progress and will be delivered in a few minutes</string>
    <string name="UArrivedorder"> is arrived. Well done!</string>
    <string name="ARRIVED">ARRIVED</string>
    <string name="UCancelledNoti"> has been cancelled</string>
    <string name="UCompletedNoti"> is successful!</string>
    <string name="DeliverFavoriteFood">Deliver Favorite Food</string>
    <string name="LoginToYourAccount">Login To Your Account</string>
    <string name="StudentID">Student Email</string>
    <string name="Studentid">Student ID</string>
    <string name="Surchargecannotbeempty">Surcharge can not be empty!</string>
    <string name="ErrorNetwork">Error Network!</string>
    <string name="Finish">Finish</string>
    <string name="Orderdetails">Order details</string>
    <string name="Extra">Surcharge</string>
    <string name="Qty">Qty: </string>
    <string name="EnteryourstudentIDtoresetyourpassword">Enter your student ID to reset your password</string>
    <string name="Sendcode">Send code</string>
    <string name="Enter4digit">Enter 4-digit \nVerification code</string>
    <string name="Resendcode">Resend code</string>
    <string name="Codesendto">Code send to </string>
    <string name="Resetyourpasswordhere">Reset your password \nhere</string>
    <string name="Onemorestep">One more step to finish and don\'t \nforget your account :)</string>
    <string name="NewPassword">New Password</string>
    <string name="Paswordnotmatch">The password does not match!</string>
    <string name="Congrats">Congrats!</string>
    <string name="Passwordresetsuccessful">Password reset successful</string>
    <string name="LoginNow">Login Now!</string>
    <string name="SubTotal">Sub-Total</string>
    <string name="MyOrders">My Orders</string>
    <string name="Signupnow">Sign up now!</string>
    <string name="Forgotpassword">Forgot password?</string>
    <string name="Login">Login</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="Deletefromfavorite">Deleted from favorite!</string>
    <string name="Addedtofavorite">Added to favorite!</string>
    <string name="Favorite">Favorite</string>
    <string name="Weprideourselves">We pride ourselves on quality service</string>
    <string name="FRESHFOOD">FRESH FOOD</string>
    <string name="Asnatureteachesus">As nature teaches us</string>
    <string name="Back">Back</string>
    <string name="Next">Next</string>
    <string name="Leteat">Let\'s eat</string>
    <string name="buyagain">Buy again</string>
    <string name="Language">Language</string>
    <string name="Nightmode">Night mode</string>
    <string name="Mesagetone">Message notification</string>
    <string name="Ordertone">Order notification</string>
    <string name="Restartapp">Your app needs to be restarted for this change to take effect</string>
    <string name="Chooseyourlanguage">Choose your language</string>
    <string name="t_o_t_i_kho_n">Tạo tài khoản</string>
    <string name="h_v_t_n">Họ và tên</string>
    <string name="m_t_kh_u">Password</string>
    <string name="nh_p_l_i_m_t_kh_u">Nhập lại mật khẩu</string>
    <string name="l_nh_n_vi_n">Is an employee</string>
    <string name="Filtertheorders">Filter the orders</string>
    <string name="ng_k">Đăng ký</string>
    <string name="b_n_c_t_i_kho_n_ng_nh_p_ngay">Bạn đã có tài khoản? Đăng nhập ngay</string>
    <string name="tr_ng_kh_ng_th_tr_ng">Trường không thể trống</string>
    <string name="h_y_nh_p_ng_email_c_a_b_n">Hãy nhập đúng email của bạn</string>
    <string name="m_t_kh_u_qu_y_u">Mật khẩu quá yếu</string>
    <string name="t_n_ng_i_d_ng_qu_d_i">Tên người dùng quá dài</string>
    <string name="t_n_ng_i_d_ng_kh_ng_th_ch_a_s">Tên người dùng không thể chứa số</string>
    <string name="sending...">sending…</string>
    <string name="Entermessage">Enter message</string>
    <string name="COMFY">COMFY</string>
    <string name="experienceityourself">Experience it yourself</string>
    <string name="FAST">FAST DELIVERY</string>
</resources>