<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item android:id="@+id/nav_sanpham"
            android:title="@string/nav_sanpham"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item android:id="@+id/nav_don"
            android:title="@string/nav_don"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item android:id="@+id/nav_nguoidung"
            android:title="@string/nav_nguoidung"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item android:id="@+id/nav_nhanvien"
            android:title="@string/nav_nhanvien"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item android:id="@+id/nav_chat"
            android:title="@string/nav_chat"
            android:icon="@drawable/ic_home_black_24dp"/>
    </group>
    <item android:title="@string/nav_taikhoan">
        <menu>
            <item android:id="@+id/nav_matkhau"
                android:title="@string/nav_matkhau"
                android:icon="@drawable/ic_home_black_24dp"/>
            <item android:id="@+id/nav_thoat"
                android:title="@string/nav_thoat"
                android:icon="@drawable/ic_home_black_24dp"/>
        </menu>

    </item>
</menu>