<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    android:scrollbars="none"
    tools:context=".Activity.Login">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/image_login_background"
        tools:ignore="ContentDescription" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="175dp"
            android:layout_height="140dp"
            android:src="@drawable/khoa"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/viga"
            android:text="@string/app_name"
            android:textColor="#15BE77"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/DeliverFavoriteFood"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:text="@string/LoginToYourAccount"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />


        <!--LOGIN FORM-->
        <EditText
            android:id="@+id/login_user"
            android:layout_width="325dp"
            android:layout_height="57dp"
            android:layout_marginTop="50dp"
            android:textColorHint="@color/primaryTextColor"
            android:background="@drawable/rounded_edittext_normal"
            android:drawableStart="@drawable/ic_email"
            android:drawableTint="#04F147"
            android:textColor="@color/primaryTextColor"
            android:drawablePadding="10dp"
            android:hint="@string/StudentID"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="10dp" />

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="325dp"
            android:layout_height="57dp"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/primaryTextColor"
            android:background="@drawable/rounded_edittext_normal"
            android:drawableStart="@drawable/ic_pass"
            android:textColor="@color/primaryTextColor"
            android:drawableTint="#04F147"
            android:drawablePadding="10dp"
            android:hint="@string/m_t_kh_u"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp" />



        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/rememberMeCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textColor="@color/primaryTextColor"
                    android:text="@string/l_u_m_t_kh_u"
                   />

                <TextView
                    android:id="@+id/text_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/Signupnow"
                    android:textColor="#15BE77" />
            </LinearLayout>


            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/forgotpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:text="@string/Forgotpassword"
                android:textColor="#15BE77" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="141dp"
            android:layout_height="57dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/light_green_gradient"
            android:text="@string/Login"
            android:textAllCaps="false"
            android:textColor="@color/textColorButtonWhite" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>